# RP4B

./: .gitignore  README.md
strawberry-trading/: CMakeLists.txt
strawberry-trading/api/: CMakeLists.txt
strawberry-trading/api/include/api/: alpaca_client.hpp  market_data_client.hpp  option_data_client.hpp  trading_client.hpp
strawberry-trading/api/include/env/: env.hpp
strawberry-trading/api/include/http/: http_client.hpp
strawberry-trading/api/include/status/: status.hpp
strawberry-trading/api/include/trading/: enums.hpp  order.hpp  requests.hpp
strawberry-trading/api/include/utils/: data.hpp  enums.hpp  order.hpp  requests.hpp
strawberry-trading/api/src/api/: alpaca_client.cpp  market_data_client.cpp  option_data_client.cpp  trading_client.cpp
strawberry-trading/api/src/env/: env.cpp
strawberry-trading/api/src/http/: http_client.cpp
strawberry-trading/api/src/status/: status.cpp
strawberry-trading/api/src/trading/: enums.cpp  order.cpp  requests.cpp
strawberry-trading/api/src/utils/: data.cpp  enums.cpp  order.cpp  requests.cpp
strawberry-trading/apps/: CMakeLists.txt
strawberry-trading/apps/paper_trader/: CMakeLists.txt  main.cpp
strawberry-trading/core/: CMakeLists.txt
strawberry-trading/core/include/common/: option.hpp  optionchain.hpp  position.hpp  timeseries.hpp
strawberry-trading/core/include/core/: MarketInterface.hpp  StrategyBase.hpp
strawberry-trading/core/include/utils/: json.hpp  option_utils.hpp  position_utils.hpp  timeseries_utils.hpp
strawberry-trading/core/src/common/: optionchain.cpp  position.cpp
strawberry-trading/core/src/core/: MarketInterface.cpp  StrategyBase.cpp
strawberry-trading/core/src/utils/: json.cpp  option_utils.cpp  position_utils.cpp  timeseries_utils.cpp
strawberry-trading/logging/: CMakeLists.txt
strawberry-trading/logging/include/: logger.hpp  logger_alias.hpp
strawberry-trading/logging/src/: logger.cpp
strawberry-trading/scheduler/: CMakeLists.txt
strawberry-trading/scheduler/include/scheduler/: scheduler.hpp
strawberry-trading/scheduler/src/scheduler/: scheduler.cpp
strawberry-trading/strategies/: CMakeLists.txt
strawberry-trading/strategies/include/strategies/: deltahedge.hpp
strawberry-trading/strategies/src/strategies/: deltahedge.cpp
