file(GLOB_RECURSE LOGGING_SOURCES CONFIGURE_DEPENDS
    "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp"
)

file(GLOB_RECURSE LOGGING_HEADERS CONFIGURE_DEPENDS
    "${CMAKE_CURRENT_SOURCE_DIR}/include/*.hpp"
)


add_library(logging STATIC ${LOGGING_SOURCES} ${LOGGING_HEADERS})

target_include_directories(logging
    PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}/include
)